--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.4.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "@types/react-lazy-load-image-component": "^1.5.3",
+    "@types/react-slick": "^0.23.10",
     "tailwindcss": "^3.3.3"
   }
 }
